--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       href="./images/favicon-32x32.png"
     />
 
+    <link href="index.css" rel="stylesheet" />
+    <link href="stylecss/first--container.css" rel="stylesheet" />
+
     <title>Frontend Mentor | Time tracking dashboard</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -26,86 +29,98 @@
     </style>
   </head>
   <body>
-    <div>Report for Jeremy Robson</div>
+    <div class="primary__container">
+      <div class="first__container">
+        <div class="first__container__element--1">
+          <img src="images/image-jeremy.png" />
+          <p>Report for</p>
+          <a href="#" class="name"><h1>Jeremy Robson</h1></a>
+        </div>
+        <div class="first__container__element--2">
+          <a href="#">Daily</a>
+          <a href="#">Weekly</a>
+          <a href="#">Monthly</a>
+        </div>
+      </div>
 
-    Daily Weekly Monthly Work 5hrs
-    <!-- daily -->
-    Previous - 7hrs
-    <!-- daily -->
-    32hrs
-    <!-- weekly -->
-    Previous - 36hrs
-    <!-- weekly -->
-    103hrs
-    <!-- monthly -->
-    Previous - 128hrs
-    <!-- monthly -->
+      Daily Weekly Monthly Work 5hrs
+      <!-- daily -->
+      Previous - 7hrs
+      <!-- daily -->
+      32hrs
+      <!-- weekly -->
+      Previous - 36hrs
+      <!-- weekly -->
+      103hrs
+      <!-- monthly -->
+      Previous - 128hrs
+      <!-- monthly -->
 
-    Play 1hr
-    <!-- daily -->
-    Previous - 2hrs
-    <!-- daily -->
-    10hrs
-    <!-- weekly -->
-    Previous - 8hrs
-    <!-- weekly -->
-    23hrs
-    <!-- monthly -->
-    Previous - 29hrs
-    <!-- monthly -->
+      Play 1hr
+      <!-- daily -->
+      Previous - 2hrs
+      <!-- daily -->
+      10hrs
+      <!-- weekly -->
+      Previous - 8hrs
+      <!-- weekly -->
+      23hrs
+      <!-- monthly -->
+      Previous - 29hrs
+      <!-- monthly -->
 
-    Study 0hrs
-    <!-- daily -->
-    Previous - 1hr
-    <!-- daily -->
-    4hrs
-    <!-- weekly -->
-    Previous - 7hrs
-    <!-- weekly -->
-    13hrs
-    <!-- monthly -->
-    Previous - 19hrs
-    <!-- monthly -->
+      Study 0hrs
+      <!-- daily -->
+      Previous - 1hr
+      <!-- daily -->
+      4hrs
+      <!-- weekly -->
+      Previous - 7hrs
+      <!-- weekly -->
+      13hrs
+      <!-- monthly -->
+      Previous - 19hrs
+      <!-- monthly -->
 
-    Exercise 1hr
-    <!-- daily -->
-    Previous - 1hr
-    <!-- daily -->
-    4hrs
-    <!-- weekly -->
-    Previous - 5hrs
-    <!-- weekly -->
-    11hrs
-    <!-- monthly -->
-    Previous - 18hrs
-    <!-- monthly -->
+      Exercise 1hr
+      <!-- daily -->
+      Previous - 1hr
+      <!-- daily -->
+      4hrs
+      <!-- weekly -->
+      Previous - 5hrs
+      <!-- weekly -->
+      11hrs
+      <!-- monthly -->
+      Previous - 18hrs
+      <!-- monthly -->
 
-    Social 1hr
-    <!-- daily -->
-    Previous - 3hrs
-    <!-- daily -->
-    5hrs
-    <!-- weekly -->
-    Previous - 10hrs
-    <!-- weekly -->
-    21hrs
-    <!-- monthly -->
-    Previous - 23hrs
-    <!-- monthly -->
+      Social 1hr
+      <!-- daily -->
+      Previous - 3hrs
+      <!-- daily -->
+      5hrs
+      <!-- weekly -->
+      Previous - 10hrs
+      <!-- weekly -->
+      21hrs
+      <!-- monthly -->
+      Previous - 23hrs
+      <!-- monthly -->
 
-    Self Care 0hrs
-    <!-- daily -->
-    Previous - 1hr
-    <!-- daily -->
-    2hrs
-    <!-- weekly -->
-    Previous - 2hrs
-    <!-- weekly -->
-    7hrs
-    <!-- monthly -->
-    Previous - 11hrs
-    <!-- monthly -->
-
+      Self Care 0hrs
+      <!-- daily -->
+      Previous - 1hr
+      <!-- daily -->
+      2hrs
+      <!-- weekly -->
+      Previous - 2hrs
+      <!-- weekly -->
+      7hrs
+      <!-- monthly -->
+      Previous - 11hrs
+      <!-- monthly -->
+    </div>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
