--- a/index.html
+++ b/index.html
@@ -29,98 +29,49 @@
     </style>
   </head>
   <body>
-    <div class="primary__container">
-      <div class="first__container">
-        <div class="first__container__element--1">
-          <img src="images/image-jeremy.png" />
-          <p>Report for</p>
-          <a href="#" class="name"><h1>Jeremy Robson</h1></a>
-        </div>
-        <div class="first__container__element--2">
-          <a href="#">Daily</a>
-          <a href="#">Weekly</a>
-          <a href="#">Monthly</a>
+    <div class="container">
+      <div class="grid">
+        <div class="tall--card">
+          <div class="top--card">
+            <img src="images/image-jeremy.png" class="author-img" />
+            <p class="report">Report for</p>
+            <h1 class="info name">Jeremy</h1>
+            <h1 class="info surname">Robson</h1>
+          </div>
+          <div class="bottom--card">
+            <a href="#" class="bottom--card__link">Daily</a>
+            <a href="#" class="bottom--card__link">Weelkly</a>
+            <a href="#" class="bottom--card__link">Monthly</a>
+          </div>
         </div>
       </div>
-
-      Daily Weekly Monthly Work 5hrs
-      <!-- daily -->
-      Previous - 7hrs
-      <!-- daily -->
-      32hrs
-      <!-- weekly -->
-      Previous - 36hrs
-      <!-- weekly -->
-      103hrs
-      <!-- monthly -->
-      Previous - 128hrs
-      <!-- monthly -->
-
-      Play 1hr
-      <!-- daily -->
-      Previous - 2hrs
-      <!-- daily -->
-      10hrs
-      <!-- weekly -->
-      Previous - 8hrs
-      <!-- weekly -->
-      23hrs
-      <!-- monthly -->
-      Previous - 29hrs
-      <!-- monthly -->
-
-      Study 0hrs
-      <!-- daily -->
-      Previous - 1hr
-      <!-- daily -->
-      4hrs
-      <!-- weekly -->
-      Previous - 7hrs
-      <!-- weekly -->
-      13hrs
-      <!-- monthly -->
-      Previous - 19hrs
-      <!-- monthly -->
-
-      Exercise 1hr
-      <!-- daily -->
-      Previous - 1hr
-      <!-- daily -->
-      4hrs
-      <!-- weekly -->
-      Previous - 5hrs
-      <!-- weekly -->
-      11hrs
-      <!-- monthly -->
-      Previous - 18hrs
-      <!-- monthly -->
-
-      Social 1hr
-      <!-- daily -->
-      Previous - 3hrs
-      <!-- daily -->
-      5hrs
-      <!-- weekly -->
-      Previous - 10hrs
-      <!-- weekly -->
-      21hrs
-      <!-- monthly -->
-      Previous - 23hrs
-      <!-- monthly -->
-
-      Self Care 0hrs
-      <!-- daily -->
-      Previous - 1hr
-      <!-- daily -->
-      2hrs
-      <!-- weekly -->
-      Previous - 2hrs
-      <!-- weekly -->
-      7hrs
-      <!-- monthly -->
-      Previous - 11hrs
-      <!-- monthly -->
     </div>
+
+    <!-- 
+  <div class="container">
+    <div class="grid">
+      <div class="card card--tall">
+        <div class="card__top">
+          <img src="images/image-jeremy.png" class="card__avatar" />
+          <p>Report for</p>
+          <a href="#" class="class="card__link"><h1>Jeremy Robson</h1></a>
+        </div>
+        <div class="card__bottom">
+          <a href="#" class="card__link">Daily</a>
+          <a href="#" class="card__link">Weekly</a>
+          <a href="#" class="card__link">Monthly</a>
+        </div>
+      </div>
+      <div class="card">
+        ...work kartica
+      </div>
+      <div class="card">
+        ...play kartica
+      </div>
+    </div> 
+  </div>
+  -->
+
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
