added new cards

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
       href="./images/favicon-32x32.png"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+
     <link href="index.css" rel="stylesheet" />
     <link href="stylecss/first--container.css" rel="stylesheet" />
 
@@ -35,8 +42,8 @@
           <div class="top--card">
             <img src="images/image-jeremy.png" class="author-img" />
             <p class="report">Report for</p>
-            <h1 class="info name">Jeremy</h1>
-            <h1 class="info surname">Robson</h1>
+            <p class="info name">Jeremy</p>
+            <p class="info surname">Robson</p>
           </div>
           <div class="bottom--card">
             <a href="#" class="bottom--card__link">Daily</a>
@@ -44,8 +51,135 @@
             <a href="#" class="bottom--card__link">Monthly</a>
           </div>
         </div>
+
+        <!-- WORK CARD -->
+        <div class="card card--work">
+          <div class="card__top">
+            <div class="card__icon card__icon--work"></div>
+          </div>
+          <div class="card__bottom">
+            <div class="card__bottom__head">
+              <a href="#" class="card__bottom__link">Work</a>
+              <div class="dot">
+                <a href="#" class="card__bottom__link dot__link__element"
+                  >...</a
+                >
+              </div>
+            </div>
+            <div class="card__bottom__time">
+              <p>32hrs</p>
+              <p class="last__week">Last week - 36hrs</p>
+            </div>
+          </div>
+        </div>
+        <!--PLAY CARD-->
+        <div class="card card--play">
+          <div class="card__top">
+            <div class="card__icon card__icon--work"></div>
+          </div>
+          <div class="card__bottom">
+            <div class="card__bottom__head">
+              <a href="#" class="card__bottom__link">Play</a>
+              <div class="dot">
+                <a href="#" class="card__bottom__link dot__link__element"
+                  >...</a
+                >
+              </div>
+            </div>
+            <div class="card__bottom__time">
+              <p>10hrs</p>
+              <p class="last__week">Last week - 8hrs</p>
+            </div>
+          </div>
+        </div>
+
+        <!--STUDY CARD-->
+        <div class="card card--study">
+          <div class="card__top">
+            <div class="card__icon card__icon--work"></div>
+          </div>
+          <div class="card__bottom">
+            <div class="card__bottom__head">
+              <a href="#" class="card__bottom__link">Study</a>
+              <div class="dot">
+                <a href="#" class="card__bottom__link dot__link__element"
+                  >...</a
+                >
+              </div>
+            </div>
+            <div class="card__bottom__time">
+              <p>4hrs</p>
+              <p class="last__week">Last week - 7hrs</p>
+            </div>
+          </div>
+        </div>
+
+        <!--EXERCISE CARD-->
+        <div class="card card--exercise">
+          <div class="card__top">
+            <div class="card__icon card__icon--work"></div>
+          </div>
+          <div class="card__bottom">
+            <div class="card__bottom__head">
+              <a href="#" class="card__bottom__link">Exercise</a>
+              <div class="dot">
+                <a href="#" class="card__bottom__link dot__link__element"
+                  >...</a
+                >
+              </div>
+            </div>
+            <div class="card__bottom__time">
+              <p>4hrs</p>
+              <p class="last__week">Last week - 5hrs</p>
+            </div>
+          </div>
+        </div>
+
+        <!--SOCIAL CARD-->
+        <div class="card card--social">
+          <div class="card__top">
+            <div class="card__icon card__icon--work"></div>
+          </div>
+          <div class="card__bottom">
+            <div class="card__bottom__head">
+              <a href="#" class="card__bottom__link">Social</a>
+              <div class="dot">
+                <a href="#" class="card__bottom__link dot__link__element"
+                  >...</a
+                >
+              </div>
+            </div>
+            <div class="card__bottom__time">
+              <p>5hrs</p>
+              <p class="last__week">Last week - 10hrs</p>
+            </div>
+          </div>
+        </div>
+
+        <!--SELFCARE CARD-->
+        <div class="card card--selfcare">
+          <div class="card__top">
+            <div class="card__icon card__icon--work"></div>
+          </div>
+          <div class="card__bottom">
+            <div class="card__bottom__head">
+              <a href="#" class="card__bottom__link">Self Care</a>
+              <div class="dot">
+                <a href="#" class="card__bottom__link dot__link__element"
+                  >...</a
+                >
+              </div>
+            </div>
+            <div class="card__bottom__time">
+              <p>2hrs</p>
+              <p class="last__week">Last week - 2hrs</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+
+    <!--PLAY CARD-->
 
     <!-- 
   <div class="container">
