--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <!--PLAY CARD-->
         <div class="card card--play">
           <div class="card__top">
-            <div class="card__icon card__icon--work"></div>
+            <div class="card__icon card__icon--play"></div>
           </div>
           <div class="card__bottom">
             <div class="card__bottom__head">
@@ -96,7 +96,7 @@
         <!--STUDY CARD-->
         <div class="card card--study">
           <div class="card__top">
-            <div class="card__icon card__icon--work"></div>
+            <div class="card__icon card__icon--study"></div>
           </div>
           <div class="card__bottom">
             <div class="card__bottom__head">
@@ -117,7 +117,7 @@
         <!--EXERCISE CARD-->
         <div class="card card--exercise">
           <div class="card__top">
-            <div class="card__icon card__icon--work"></div>
+            <div class="card__icon card__icon--exercise"></div>
           </div>
           <div class="card__bottom">
             <div class="card__bottom__head">
@@ -138,7 +138,7 @@
         <!--SOCIAL CARD-->
         <div class="card card--social">
           <div class="card__top">
-            <div class="card__icon card__icon--work"></div>
+            <div class="card__icon card__icon--social"></div>
           </div>
           <div class="card__bottom">
             <div class="card__bottom__head">
@@ -159,7 +159,7 @@
         <!--SELFCARE CARD-->
         <div class="card card--selfcare">
           <div class="card__top">
-            <div class="card__icon card__icon--work"></div>
+            <div class="card__icon card__icon--selfcare"></div>
           </div>
           <div class="card__bottom">
             <div class="card__bottom__head">
